--- a/matlabasacalculator.tex
+++ b/matlabasacalculator.tex
@@ -343,6 +343,11 @@ Then increase $N$ until you get a smooth plot of the function $y$.
 \end{ex}
 \known{linspace, :}
 
+\begin{ex}
+Get details about the \emph{plot} command by using the \emph{help} function.
+\end{ex}
+\known{help}
+
 
 
 \begin{ex}
