--- a/linearalgebra.tex
+++ b/linearalgebra.tex
@@ -4,16 +4,120 @@
 % !TeX spellcheck = en_GB
 \section{Linear algebra in Matlab}
 
-\subsection{Entering matrices}
+Matlab was initially developed as a Matrix Laboratory, ie. a 
+place where it was easy to work with matrices and linear algebra.
+In this section we will look into how to enter and work with matrices 
+and vectors in Matlab.
+To enter the matrix 
+\begin{align*}
+\begin{pmatrix} 1 & 3 & 2 \\ 4 & 8 & 5 \end{pmatrix}
+\end{align*}
+and save it in the variable \verb!A!, use the following command entered on the 
+command line.
+\begin{lstlisting}
+>> A = [1, 3, 2; 4, 8, 5]
+A =
+     1     3     2
+     4     8     5
+\end{lstlisting}
+To enter a matrix in Matlab, start with an opening square bracket \verb!"["!.
+Then enter all the values in the first row separated by a comma \verb!","!.
+To enter the next row, insert a semicolon \verb!";"!.
+Fill in values for the next row in a similar way that the values in the first 
+row was entered.
+Continue until all values in the matrix have been entered and then end
+the expression by inserting a closing square bracket \verb!"]"!.
+When Matlab shows the value of a matrix, the brackets, commas and 
+semicolons are replaced by white space.
+
+When a matrix is saved in a variable, the size / dimensions of the 
+matrix can be determined through the \verb!size! command.
+To continue with the example from before:
+\begin{lstlisting}
+>> size(A)
+ans =
+     2     3
+\end{lstlisting}
+The output from the size command is a matrix with one row and two columns.
+The first value in the output is the number of rows in the matrix, whereas the 
+second value in the output is the number of columns in the matrix.
+
+Functions like \verb!ones!, \verb!zeros!, \verb!magic! and \verb!eye! 
+all create matrices with a size that is determined by the input 
+parameters provided to the functions.
+
 
 \subsection{Multiplying matrices}
 
+To multiply two matrices you have to use the \verb!*! character.
+As an example, lets enter and multiply the following two matrices
+\begin{align*}
+A = \begin{pmatrix} 4 & 2 \\ -3 & 5 \end{pmatrix} 
+\qquad 
+B = \begin{pmatrix} 1 & 3 & 2 \\ 4 & 8 & 5 \end{pmatrix} 
+\end{align*}
+In matlab the operation looks like this:
+\begin{lstlisting}
+>> A = [4, 2; -3, 5];
+>> B = [1, 3, 2; 4, 8, 5];
+>> C = A * B
+C =
+    12    28    18
+    17    31    19
+\end{lstlisting}
+%
+If it is not possible to multiply the matrices (when the number of columns in the first 
+matrix is different from the number of rows in the second matrix), 
+matlab will throw an error like shown here:
+\begin{lstlisting}
+>> B * A
+Error using  * 
+Incorrect dimensions for matrix multiplication. Check that the 
+number of columns in the first matrix matches the number of rows 
+in the second matrix. To perform elementwise multiplication, 
+use '.*'.
+\end{lstlisting}
+
+
 \subsection{Solving systems of equations}
 
+It is very easy to solve a system of linear equations with matlab.
+As an example take the linear system of two equations with two unknowns
+\begin{align*}
+1x + 2y = 3 \qquad 3x + 2y = 3
+\end{align*}
+This linear system of equations can be written in matrix form as follows
+\begin{align*}
+\begin{pmatrix}
+1 & 2 \\ 3 & 2
+\end{pmatrix}
+\cdot \vec{x} = 
+\begin{pmatrix}
+3 \\ 3
+\end{pmatrix}
+\end{align*}
+By concatenating the two matrices in the horizontal direction, the 
+\emph{augmented} matrix that represents the system of equations can be formed:
+\begin{align*}
+\begin{pmatrix}
+1 & 2 & 3 \\ 3 & 2 & 3
+\end{pmatrix}
+\end{align*}
+Through row operations, the augmented matrix can be converted to reduced 
+row echelon form from which it is easy to read out the solution.
+This can be achieved with the following code:
 \begin{lstlisting}
-A = [1, 2, 3; 3, 2, 3]
-rref(A)
+>> A = [1, 2, 3; 3, 2, 3];
+>> rref(A)
+ans =
+    1.0000         0         0
+         0    1.0000    1.5000
 \end{lstlisting}
+
+% Slicing, selecting elements from a matrix
+
+% Building matrices from other matrices 
+% cat
 
 
 
